[package]
name = "vccgnd2040touchosu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm", "linker-plugin-lto"] }
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }

defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
vcc-gnd-yd-rp2040 = { version = "0.4.0", features = [
    "rt",
    "rom-v2-intrinsics",
    "critical-section-impl",
    "rom-func-cache",
    "boot2",
] }
panic-halt = "0.2.0"
usb-device = "0.2.9"
heapless = "0.8.0"
# rp2040-hal = { version = "0.9.0", features = [
#     "rt",
#     "rom-v2-intrinsics",
#     "critical-section-impl",
#     "rom-func-cache",
# ] }
critical-section = "1.1.2"
ws2812-pio = "0.7.0"
usbd-human-interface-device = "0.4.5"
fugit = "0.3.7"
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

#panic = "abort"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

#panic = "abort"

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false


[profile.release.package.rp2040-hal]
opt-level = 0
[profile.dev.package.rp2040-hal]
opt-level = 0
[profile.dev.package.vcc-gnd-yd-rp2040]
opt-level = 0
[profile.release.package.vcc-gnd-yd-rp2040]
opt-level = 0


[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 3
overflow-checks = false


# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

#panic = "abort"

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

#panic = "abort"
